tests/ui/stability-attribute/missing-stability-attr-at-top-level.rs
#![feature(staged_api)]
//~^ ERROR module has missing stability attribute

fn main() {}
